<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.jenkins.weavingsimulator</groupId>
  <artifactId>weavingSimulator</artifactId>
  <packaging>jar</packaging>
  <version>0.2.8-PRERELEASE</version>
  <name>weavingSimulator</name>
  <url>https://sourceforge.net/projects/weavingsim/</url>
  <scm>
    <connection>scm:git:.</connection>
  </scm>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-assembly-plugin</artifactId>
	<configuration>
	  <descriptor>src/assembly/bin.xml</descriptor>
	  <finalName>freeweave-${pom.version}</finalName>
	</configuration>
	<executions>
	  <execution>
	    <phase>package</phase>
	    <goals>
	      <goal>single</goal>
	    </goals>
	  </execution>
	</executions>
      </plugin>

      <plugin>
	<groupId>org.codehaus.mojo</groupId>
	<artifactId>exec-maven-plugin</artifactId>
	<executions>
	  <execution>
	    <configuration>
	      <executable>python</executable>
	      <arguments>
		<argument>fetch_doc.py</argument>
	      </arguments>          
	    </configuration>
	    <id>python-build</id>
	    <phase>prepare-package</phase>
	    <goals>
	      <goal>exec</goal>
	    </goals>
	  </execution>
	</executions>
      </plugin> 
  
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <excludes>
            <exclude>**/uat/*</exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.8</version>
        <executions>
          <execution>
            <id>guitest</id>
            <phase>verify</phase>
            <configuration>
	      <target name="guitest">
		<unzip src="target/freeweave-${pom.version}-bin.zip" dest="temp" />
		<junit fork="yes" printsummary="withOutAndErr" haltonfailure="true">
		  <jvmarg value="-Dawt.toolkit=net.java.openjdk.cacio.ctc.CTCToolkit" />
		  <jvmarg value="-Djava.awt.headless=false" />
		  <jvmarg value="-Djava.awt.graphicsenv=net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment" />
		  <formatter type="xml" />
		  <batchtest>
		    <fileset dir="src/test/java" casesensitive="yes">
		      <include name="**/uat/**/*Test.java" />
		    </fileset>
		  </batchtest>
		  <classpath>
		    <path id="GUITest.classpath">
		      <pathelement location="temp/freeweave-${pom.version}/WeavingSimulator.jar" />
		      <pathelement location="temp/freeweave-${pom.version}/lib/commons-lang-2.6.jar" />
		      <pathelement location="temp/freeweave-${pom.version}/lib/ini4j-0.5.1.jar" />
		      <pathelement location="target/test-classes" />
		      <pathelement location="${junit:junit:jar}"/>
		      <pathelement location="${org.hamcrest:hamcrest-all:jar}"/>
		      <pathelement location="${net.java.openjdk.cacio:cacio-tta:jar}"/>
		      <pathelement location="${uispec4j:uispec4j:jar}"/>
		      <pathelement location="${net.java.openjdk.cacio:cacio-shared:jar}"/>
		    </path>
		  </classpath>
		</junit>
	      </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
	<dependencies>
          <dependency>
            <groupId>org.apache.ant</groupId>
            <artifactId>ant-junit</artifactId>
            <version>1.9.4</version>         
	  </dependency>      
	</dependencies>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>com.jenkins.weavingsimulator.WeavingSimulatorApp</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
	<groupId>com.google.code.maven-replacer-plugin</groupId>
	<artifactId>replacer</artifactId>
	<version>1.5.3</version>
	<executions>
	  <execution>
	    <phase>prepare-package</phase>
	    <goals>
	      <goal>replace</goal>
	    </goals>                   
	  </execution>
	</executions>
	<configuration>
	  <file>src/main/resources/com/jenkins/weavingsimulator/about.txt</file>
	  <outputFile>target/classes/com/jenkins/weavingsimulator/about.txt</outputFile>
	  <replacements>
	    <replacement>
	      <token>VERSION</token>
	      <value>${pom.version}</value>
	    </replacement>         
	  </replacements>
	</configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <tagNameFormat>@{project.version}</tagNameFormat>
        </configuration>
      </plugin>   
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>net.java.openjdk.cacio</groupId>
      <artifactId>cacio-tta</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
   <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>1.3</version>
      <scope>test</scope>
   </dependency> 
   <dependency>
      <groupId>org.ini4j</groupId>
      <artifactId>ini4j</artifactId>
      <version>0.5.1</version>
   </dependency>
   <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>2.6</version>
   </dependency>
   <dependency>
     <groupId>uispec4j</groupId>
     <artifactId>uispec4j</artifactId>
     <version>2.5-SNAPSHOT</version>
     <scope>system</scope>
     <systemPath>${project.basedir}/lib/uispec4j-2.5-SNAPSHOT-jdk8.jar</systemPath>
   </dependency>
  </dependencies>
</project>
